--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+	<title>{% block title %}GSD Solutions{% endblock %}</title>
+
+	{% block stylesheets %}
+		<link href="{{ asset('https://fonts.googleapis.com/css?family=Arvo:700|PT+Sans|VT323') }}" rel="stylesheet">
+		<link href="{{ asset('https://fonts.googleapis.com/icon?family=Material+Icons') }}" rel="stylesheet">
+		<link href="{{ asset('/css/magnific-popup.css') }}" type="text/css" rel="stylesheet"
+			  media="screen,projection"/>
+		<link href="{{ asset('/css/jquery.fullpage.css') }}" type="text/css" rel="stylesheet"
+			  media="screen,projection"/>
+		<link href="{{ asset('/css/materialize.min.css') }}" type="text/css" rel="stylesheet" media="screen,projection"/>
+		<link href="{{ asset('/css/style.css') }}" type="text/css" rel="stylesheet" media="screen,projection"/>
+	{% endblock %}
+
+	<link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
+</head>
+<body>
+{% block body %}{% endblock %}
+{% block javascripts %}
+	<script src="{{ asset('https://code.jquery.com/jquery-2.1.1.min.js') }}"></script>
+	<script src="{{ asset('/js/materialize.min.js') }}"></script>
+	<script src="{{ asset('/js/app.js') }}"></script>
+{% endblock %}
+</body>
 </html>
