--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -1,1 +1,230 @@
-<h1>test template</h1>
+{% extends 'base.html.twig' %}
+
+{% block body %}
+
+	<div id="fullpage">
+		<div class="main-hero fp-section" id="main-hero">
+			<div id="dots-canvas"></div>
+			<div class="hero-container__overlay"></div>
+			<div class="hero-container">
+				<div class="hero-container__content">
+					<div class="container">
+
+						<div class="hero-container__about-me">
+							<div class="row">
+								<div class="col l4 s12">
+									<div class="hero-container__headshot-wrapper"><img
+												src="{{ asset('/images/BusinessHeadshot.jpg') }}"
+												alt="Photo"
+												class="responsive-img"></div>
+								</div>
+								<div class="col l8"><h2>Hello,<br>I'm David {</h2>
+									<blockquote> I am a full-stack web developer who enjoys finding elegant solutions to
+										non-trivial problems. Focused on the goal and driven by visual sophistication
+										and
+										laser-sharp precision, I take pride in every finished project, and never stop
+										learning
+										along the way.
+									</blockquote>
+
+									<h2>}</h2>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="hero-container__scroll">
+						<h6>and then he scrolleth...</h6>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<section class="gsd-section fp-section fp-section-top" id="main-content">
+			<div class="">
+				<div class="container">
+					<h3 class="center-align section-heading">My Expertise</h3>
+					<!--   Icon Section   -->
+					<div class="row ">
+						<div class="col s12 l4">
+							<div class="gsd-expertise">
+								<h3>&lt;HTML&gt;</h3>
+							</div>
+						</div>
+
+						<div class="col s12 l4">
+							<div class="gsd-expertise">
+								<h3>.CSS</h3>
+							</div>
+						</div>
+
+						<div class="col s12 l4">
+							<div class="gsd-expertise">
+								<h3>Javascript(){}</h3>
+							</div>
+						</div>
+
+						<div class="col s12 l4">
+							<div class="gsd-expertise">
+								<h3>NodeJS</h3>
+							</div>
+						</div>
+
+						<div class="col s12 l4">
+							<div class="gsd-expertise">
+								<h3>Express</h3>
+							</div>
+						</div>
+
+						<div class="col s12 l4">
+							<div class="gsd-expertise">
+								<h3>React</h3>
+							</div>
+						</div>
+
+						<div class="col s12 l4">
+							<div class="gsd-expertise">
+								<h3>Ruby on Rails</h3>
+							</div>
+						</div>
+
+						<div class="col s12 l4">
+							<div class="gsd-expertise">
+								<h3>PostgreSQL</h3>
+							</div>
+						</div>
+
+						<div class="col s12 l4">
+							<div class="gsd-expertise">
+								<h3>Visual Frameworks</h3>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
+		</section>
+
+
+		<section class="gsd-section fp-section fp-section-top section-black">
+			<div class="container">
+				<div class="section">
+					<h3 class="center-align section-heading">My Work</h3>
+					<div class="row flex">
+						<div class="col s12 m6 l6 xl4">
+							<h4>David's Game Board</h4>
+							<p>Web resource that helps gamers create and categorize their game libraries.
+								Back-end was done with Node.js, Express, and 3rd party API containing game-data.
+								Front-end was done with Materialize framework and handlebars.</p>
+						</div>
+						<div class="col s12 m6 l6 xl7 offset-xl1 gsd-work__image-wrapper"
+							 style="background-size: cover; background-position: top center; background-image: url('https://i.imgur.com/gI4P9U5.jpg'); background-repeat: no-repeat;">
+							<img src="https://i.imgur.com/gI4P9U5.jpg" alt="" class="hide-on-med-and-up responsive-img">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col s12">
+							<h3 class="right"><a href="https://sandros-game-board.herokuapp.com/user/gameboard"
+												 target="_blank">Demo</a></h3>
+							<h3 class="right"><a href="https://github.com/Gura-San/game_board" target="_blank">Github&nbsp;</a>
+							</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="gsd-section fp-section section-black">
+			<div class="container">
+				<div class="section">
+					<div class="row flex">
+						<div class="col s12 m6 l6 xl4">
+							<h4>David's Book Review</h4>
+							<p>A bookshop/library project that allows users to add books and wright reviews. <br>The
+								project was done with Rails framework.</p>
+						</div>
+						<div class="col s12 m6 l6 xl7 offset-xl1 gsd-work__image-wrapper"
+							 style="background-size: cover; background-position: top center; background-image: url('https://i.imgur.com/t6QCUMC.jpg'); background-repeat: no-repeat;">
+							<img src="https://i.imgur.com/t6QCUMC.jpg" alt="" class="hide-on-med-and-up responsive-img">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col s12">
+							<!-- <h3 class="right"><a href="https://sandros-game-board.herokuapp.com/user/gameboard" target="_blank">Demo</a></h3> -->
+							<h3 class="right"><a href="https://github.com/Gura-San/game_board" target="_blank">Github&nbsp;</a>
+							</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="gsd-section fp-section section-black">
+			<div class="container">
+				<div class="section">
+					<div class="row flex">
+						<div class="col s12 m6 l6 xl4">
+							<h4>Trivia Game</h4>
+							<p>A trivia game written on vanilla java script. Was done using OOP principals.</p>
+						</div>
+						<div class="col s12 m6 l6 xl7 offset-xl1 gsd-work__image-wrapper"
+							 style="background-size: cover; background-position: top center; background-image: url('https://i.imgur.com/3kxjaB2.png'); background-repeat: no-repeat;">
+							<img src="https://i.imgur.com/3kxjaB2.png" alt="" class="hide-on-med-and-up responsive-img">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col s12">
+							<!-- <h3 class="right"><a href="https://sandros-game-board.herokuapp.com/user/gameboard" target="_blank">Demo</a></h3> -->
+							<h3 class="right"><a href="https://github.com/Gura-San/trivia_game" target="_blank">Github&nbsp;</a>
+							</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="gsd-section fp-section section-black">
+			<div class="container">
+				<div class="section">
+					<div class="row flex">
+						<div class="col s12 m6 l6 xl4">
+							<h4>DBC Back-end</h4>
+							<p>A back-end server for the Dollar Beer Club project. Done with Node.JS and express
+								framework.</p>
+						</div>
+						<div class="col s12 m6 l6 xl7 offset-xl1 gsd-work__image-wrapper"
+							 style="background-size: cover; background-position: top center; background-image: url('https://d1o50x50snmhul.cloudfront.net/wp-content/uploads/2017/02/22180000/ff3ywn-1-800x533.jpg'); background-repeat: no-repeat;">
+							<img src="https://d1o50x50snmhul.cloudfront.net/wp-content/uploads/2017/02/22180000/ff3ywn-1-800x533.jpg"
+								 alt="" class="hide-on-med-and-up responsive-img">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col s12">
+							<!-- <h3 class="right"><a href="https://sandros-game-board.herokuapp.com/user/gameboard" target="_blank">Demo</a></h3> -->
+							<h3 class="right"><a href="https://github.com/Gura-San/beer-club-backend" target="_blank">Github&nbsp;</a>
+							</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="personal-info fp-section gsd-section">
+			<div class="container center-align">
+				<h3>----My----</h3>
+				<br>
+				<h3><a href="https://www.linkedin.com/in/gurasan/">Linkedin</a></h3>
+				<h3><a href="https://github.com/Gura-San">Github</a></h3>
+				<h3>
+					<a href="https://drive.google.com/file/d/1xxMenN6NQItjoXNplUmSW1c4n64HTe-L/view?usp=sharing">Resume</a>
+				</h3>
+				<br>
+				<h3>----------</h3>
+			</div>
+		</section>
+	</div>
+
+	<div id="test-popup" class="white-popup mfp-hide">
+		<h4>David's Game Board</h4>
+		<iframe src="https://sandros-game-board.herokuapp.com/user/gameboard" frameborder="0"
+				style="border: 1px dashed gray"></iframe>
+	</div>
+
+{% endblock %}
